--- a/sitegate/templates/sitegate/signup/form_bootstrap.html
+++ b/sitegate/templates/sitegate/signup/form_bootstrap.html
@@ -1,4 +1,4 @@
-{% extends "sitegate/_form_base.html" %}
+{% extends "sitegate/signup/_form_base.html" %}
 {% load i18n %}
 {% block fields %}
     {% for field in signup_form %}
