Implemented basic sign in flows.

--- a/sitegate/templates/sitegate/signin/form_as_p.html
+++ b/sitegate/templates/sitegate/signin/form_as_p.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 {% block fields %}
 {{ signin_form.as_p }}
-<input type="submit" value="{% trans "Sign in" %}" />
+<input type="submit" value="{% trans "Log in" %}" />
 {% endblock %}
 
