--- a/sitegate/templates/sitegate/signin/form_bootstrap.html
+++ b/sitegate/templates/sitegate/signin/form_bootstrap.html
@@ -1,6 +1,15 @@
 {% extends "sitegate/signin/_form_base.html" %}
 {% load i18n %}
 {% block fields %}
+    {% if signin_form.non_field_errors %}
+    <div class="alert alert-error">
+        <ul class="unstyled">
+            {% for error in signin_form.non_field_errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
     {% for field in signin_form %}
         <div class="control-group {% if field.errors %}error{% endif %}">
             {% if field.errors %}<div class="alert alert-error">{{ field.errors.0 }}</div>{% endif %}
@@ -8,5 +17,5 @@
             {% if field.help_text %}<span class="help-block"><small>{{ field.help_text }}</small></span>{% endif %}
         </div>
     {% endfor %}
-    <input type="submit" class="btn btn-block btn-primary" value="{% trans "Sign in" %}" />
+    <input type="submit" class="btn btn-block btn-primary" value="{% trans "Log in" %}" />
 {% endblock %}
