--- a/sitegate/templates/sitegate/signin/_form_base.html
+++ b/sitegate/templates/sitegate/signin/_form_base.html
@@ -1,5 +1,9 @@
-<form method="post">
-{% for hidden in signin_form.hidden_fields %}{{ hidden }}{% endfor %}
-{% csrf_token %}
-{% block fields %}{% endblock %}
-</form>
+{% if signin_form.flow_enabled %}
+    <form method="post">
+    {% for hidden in signin_form.hidden_fields %}{{ hidden }}{% endfor %}
+    {% csrf_token %}
+    {% block fields %}{% endblock %}
+    </form>
+{% else %}
+    {{ signin_form.flow_disabled_text }}
+{% endif %}
