--- a/sitegate/templates/sitegate/signin/form_bootstrap3.html
+++ b/sitegate/templates/sitegate/signin/form_bootstrap3.html
@@ -17,5 +17,5 @@
             {% if field.help_text %}<span class="help-block"><small>{{ field.help_text }}</small></span>{% endif %}
         </div>
     {% endfor %}
-    <input type="submit" class="btn btn-default btn-block btn-primary" value="{% trans "Sign up" %}" />
+    <input type="submit" class="btn btn-default btn-block btn-primary" value="{% trans "Log in" %}" />
 {% endblock %}
