Added experimental support for sign in using remote services, e.g. Yandex.

--- a/sitegate/templates/sitegate/signin/_form_base.html
+++ b/sitegate/templates/sitegate/signin/_form_base.html
@@ -4,6 +4,7 @@
     {% csrf_token %}
     {% block fields %}{% endblock %}
     </form>
+    {% include "sitegate/signin/form_remotes.html" with or_clause=1 %}
 {% else %}
     {{ signin_form.flow_disabled_text }}
 {% endif %}
