Add Google for a remote auth.

--- a/sitegate/templates/sitegate/signin/form_remotes.html
+++ b/sitegate/templates/sitegate/signin/form_remotes.html
@@ -4,7 +4,7 @@
         <br>
         <div>
         {% if or_clause %}{% trans "Or sign in with" %}{% else %}{% trans "Sign in with" %}{% endif %}:
-        {% for remote in remotes %}<a href="{% url "remote_auth_start" alias=remote.alias %}">{{ remote.title }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}.
+        {% for remote in remotes %}<a href="{{ remote.url_auth_start }}">{{ remote.title }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}.
         </div>
     {% endif %}
 {% endwith %}
